--- a/pom.xml
+++ b/pom.xml
@@ -189,10 +189,7 @@
                 </dependencies>
                 <configuration>
                     <!--<swaggerInput>${project.basedir}/src/docs/swagger.json</swaggerInput>-->
-                    <!--<swaggerInput>http://ip:port/v2/api-docs</swaggerInput>-->
-                    <swaggerInput>
-                        http://192.168.35.180:8080/v2/api-docs?group=%E4%BA%91%E5%8D%A1%E5%8F%A3%E5%B9%B3%E5%8F%B0%E6%8E%A5%E5%8F%A3
-                    </swaggerInput>
+                    <swaggerInput>http://ip:port/v2/api-docs</swaggerInput>
                     <outputDir>${generated.asciidoc.directory}</outputDir>
                     <config>
                         <swagger2markup.markupLanguage>ASCIIDOC</swagger2markup.markupLanguage>
